--- a/style.css
+++ b/style.css
@@ -84,6 +84,13 @@ header .icons a:hover {
 header .icons #menu-bars {
     display: none;
 }
+@media (max-width:991px) {
+    html {
+        font-size: 50%;
+    }
+
+
+}
 
 
 
@@ -137,9 +144,14 @@ header .icons #menu-bars {
         right: 0;
         background: #fff;
         border-top: .1rem solid rgba(0, 0, 0, .2);
+         border-bottom: .1rem solid rgba(0, 0, 0, .2);
         padding: 1rem;
+        clip-path: polygon(0 0,100% 0, 100% 0, 0 0);
     }
+header .navbar.active{
+        clip-path: polygon(0 0,100% 0, 100% 100%, 0% 100%);
 
+}
     header .navbar a {
         display: block;
         padding: 1.5rem;
