--- a/style.css
+++ b/style.css
@@ -84,11 +84,69 @@ header .icons a:hover {
 header .icons #menu-bars {
     display: none;
 }
+
+#search-form {
+    position: fixed;
+    top: -110%;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1004;
+    background: rgba(0, 0, 0, .8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+}
+#search-form.active{
+    top: 0;
+}
+
+#search-form #search-box {
+
+    width: 50rem;
+    border-bottom: .1rem solid #fff;
+    padding: 1rem 0;
+    color: #fff;
+    font-size: 3rem;
+    text-transform: none;
+    background: none;
+
+}
+
+#search-form #search-box::placeholder {
+    color: #eee;
+}
+
+#search-form #search-box::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    /* color: #eee; */
+}
+
+#search-form label {
+    color: #fff;
+    cursor: pointer;
+    font-size: 3rem;
+}
+
+#search-form label:hover {
+    color: var(--green);
+}
+#search-form #close{
+    position: absolute;
+    color: #fff;
+    cursor: pointer;
+    top: 2rem;
+    right: 3rem;
+    font-size: 5rem;
+}
 @media (max-width:991px) {
     html {
         font-size: 50%;
     }
+#search-form #search-box{
 
+}
 
 }
 
@@ -144,19 +202,25 @@ header .icons #menu-bars {
         right: 0;
         background: #fff;
         border-top: .1rem solid rgba(0, 0, 0, .2);
-         border-bottom: .1rem solid rgba(0, 0, 0, .2);
+        border-bottom: .1rem solid rgba(0, 0, 0, .2);
         padding: 1rem;
-        clip-path: polygon(0 0,100% 0, 100% 0, 0 0);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     }
-header .navbar.active{
-        clip-path: polygon(0 0,100% 0, 100% 100%, 0% 100%);
 
-}
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+
+    }
+
     header .navbar a {
         display: block;
         padding: 1.5rem;
         margin: 1rem;
         font-size: 2rem;
         background: #eee;
+    }
+    #search-form #search-box{
+        width:90% ;
+        margin: 0 1rem;
     }
 }
