--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
     --light-color: #666;
     --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0..1);
 }
+
 body {
-    overflow-x: hidden;  /* for preventing horizontal scroll only */
+    overflow-x: hidden;
+    /* for preventing horizontal scroll only */
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -32,7 +35,23 @@ section {
 section:nth-child(even) {
     background: #eee;
 }
-.btn{
+
+.sub-heading {
+    text-align: center;
+    color: var(--green);
+    font-size: 2rem;
+    padding-top: 1rem;
+}
+
+.heading {
+    text-align: center;
+    color: var(--black);
+    font-size: 3rem;
+    padding-bottom: 2rem;
+    text-transform: uppercase;
+}
+
+.btn {
     margin-top: 1rem;
     display: inline-block;
     font-size: 1.7rem;
@@ -40,12 +59,14 @@ section:nth-child(even) {
     background: var(--black);
     border-radius: .5rem;
     cursor: pointer;
-    padding: .8rem 3rem ;
+    padding: .8rem 3rem;
 }
-.btn:hover{
+
+.btn:hover {
     background: var(--green);
     letter-spacing: .1rem;
 }
+
 header {
     position: fixed;
     top: 0;
@@ -181,13 +202,16 @@ header .icons #menu-bars {
 .home .home-slider .slide .image {
     flex: 1 1 45rem;
 }
-.home .home-slider .slide .image img{
+
+.home .home-slider .slide .image img {
     width: 100%;
 }
+
 .home .home-slider .slide .content span {
     color: var(--green);
     font-size: 2.5rem;
 }
+
 .home .home-slider .slide .content h3 {
     color: var(--black);
     font-size: 7rem;
@@ -199,14 +223,149 @@ header .icons #menu-bars {
     padding: .5rem 0;
     line-height: 1.5;
 }
+
+.swiper-pagination-bullet-active {
+    background: var(--green);
+}
+
+.dishes .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap: 1.5rem;
+}
+
+.dishes .box-container .box {
+    padding: 2.5rem;
+    background: #fff;
+    border-radius: .5rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: var(--box-shadow);
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.dishes .box-container .box .fa-heart,
+.dishes .box-container .box .fa-eye {
+    position: absolute;
+    top: 1.5rem;
+    background: #eee;
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.dishes .box-container .box .fa-heart:hover,
+.dishes .box-container .box .fa-eye:hover {
+    background: var(--green);
+    color: #fff;
+
+}
+
+.dishes .box-container .box:hover .fa-heart {
+    right: 1.5rem;
+}
+
+.dishes .box-container .box:hover .fa-eye {
+    left: 1.5rem;
+}
+
+.dishes .box-container .box img {
+    height: 17rem;
+    margin: 1rem 0;
+}
+
+.dishes .box-container .box .stars {
+   padding: 1rem 0;
+}
+
+.dishes .box-container .box .stars i {
+    font-size: 1.7rem;
+    color: var(--green);
+}
+.dishes .box-container .box span{
+    color: var(--green);
+    font-weight: bolder;
+    margin-right: 1rem;
+    font-size: 2.5rem;
+}
+
 .home-slider {
     width: 100%;
     height: auto;
 }
+.about .row{
+display: flex;
+flex-wrap: wrap;
+gap: 1.5rem;
+align-items: center;
+}
+.about .row .image{
+    flex: 1 1 45rem;
+}
+.about .row .image img{
+    width: 100%;
+}
+.about .row .content{
+    flex: 1 1 45rem;
+}
+.about .row .content h3{
+    color: var(--black);
+    font-size: 4rem;
+    padding: .5rem 0;
+}
+.about .row .content p{
+    color: var(--light-color);
+    font-size: 1.5rem;
+    padding: .5rem 0;
+    line-height: 2;
+}
+.about .row .content .icons-container{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+    margin-top: .5rem;
+}
+.about .row .content .icons-container .icons{
+    background: #eee;
+    border-radius: .5rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    flex: 1 1 17rem;
+    padding: 1.5rem 1rem;
+}
+.about .row .content .icons-container .icons i{
+font-size: 2.5rem;
+color: var(--green);
+}
+.about .row .content .icons-container .icons span{
+font-size: 1.5rem;
+color: var(--black);
+}
+
+
+
+
+
+
+
+
+
 
 @media (max-width:991px) {
     html {
         font-size: 50%;
+    }
+    .dishes .box-container .box img{
+        height: auto;
+        width: 100%;
     }
 
 }
@@ -249,6 +408,10 @@ header .icons #menu-bars {
         padding: 1rem 2rem;
     }
 
+    section {
+        padding: 2rem;
+    }
+
 }
 
 @media (max-width:768px) {
@@ -284,5 +447,9 @@ header .icons #menu-bars {
     #search-form #search-box {
         width: 90%;
         margin: 0 1rem;
+    }
+
+    .home .home-slider .slide .content h3 {
+        font-size: 5rem;
     }
 }
