--- a/style.css
+++ b/style.css
@@ -279,14 +279,15 @@ header .icons #menu-bars {
 }
 
 .dishes .box-container .box .stars {
-   padding: 1rem 0;
+    padding: 1rem 0;
 }
 
 .dishes .box-container .box .stars i {
     font-size: 1.7rem;
     color: var(--green);
 }
-.dishes .box-container .box span{
+
+.dishes .box-container .box span {
     color: var(--green);
     font-weight: bolder;
     margin-right: 1rem;
@@ -297,40 +298,48 @@ header .icons #menu-bars {
     width: 100%;
     height: auto;
 }
-.about .row{
-display: flex;
-flex-wrap: wrap;
-gap: 1.5rem;
-align-items: center;
+
+.about .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: center;
 }
-.about .row .image{
+
+.about .row .image {
     flex: 1 1 45rem;
 }
-.about .row .image img{
+
+.about .row .image img {
     width: 100%;
 }
-.about .row .content{
+
+.about .row .content {
     flex: 1 1 45rem;
 }
-.about .row .content h3{
+
+.about .row .content h3 {
     color: var(--black);
     font-size: 4rem;
     padding: .5rem 0;
 }
-.about .row .content p{
+
+.about .row .content p {
     color: var(--light-color);
     font-size: 1.5rem;
     padding: .5rem 0;
     line-height: 2;
 }
-.about .row .content .icons-container{
+
+.about .row .content .icons-container {
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
     padding: 1rem 0;
     margin-top: .5rem;
 }
-.about .row .content .icons-container .icons{
+
+.about .row .content .icons-container .icons {
     background: #eee;
     border-radius: .5rem;
     border: .1rem solid rgba(0, 0, 0, .2);
@@ -341,29 +350,104 @@ align-items: center;
     flex: 1 1 17rem;
     padding: 1.5rem 1rem;
 }
-.about .row .content .icons-container .icons i{
-font-size: 2.5rem;
-color: var(--green);
-}
-.about .row .content .icons-container .icons span{
-font-size: 1.5rem;
-color: var(--black);
+
+.about .row .content .icons-container .icons i {
+    font-size: 2.5rem;
+    color: var(--green);
 }
 
+.about .row .content .icons-container .icons span {
+    font-size: 1.5rem;
+    color: var(--black);
+}
+
+.menu .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+
+.menu .box-container .box {
+    background: #fff;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+}
+
+.menu .box-container .box .image {
+    height: 25rem;
+    width: 100%;
+    padding: 1.5rem;
+    overflow: hidden;
+
+}
+
+.menu .box-container .box .image img {
+    height: 100%;
+    width: 100%;
+    border-radius: .5rem;
+
+}
+
+.menu .box-container .box .image .fa-heart {
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    background: #fff;
+    border-radius: 50%;
+    color: var(--black);
+
+}
+
+.menu .box-container .box .image .fa-heart:hover {
+    background-color: var(--green);
+    color: #fff;
+}
 
 
+.menu .box-container .box .content {
+    padding: 2rem;
+    padding-top: 0;
+}
 
+.menu .box-container .box .content .stars {
+    padding-bottom: 1rem;
+}
 
+.menu .box-container .box .content .stars i {
+    font-size: 1.7rem;
+    color: var(--green);
+}
 
+.menu .box-container .box .content h3 {
+    color: var(--black);
+    font-size: 2.5rem;
+}
 
+.menu .box-container .box .content p {
+    color: var(--light-color);
+    font-size: 1.7rem;
+    padding: .5rem 0;
+    line-height: 1.5;
+}
 
-
+.menu .box-container .box .content .pice {
+    color: var(--green);
+    margin-left: 1rem;
+    font-size: 2.5rem;
+}
 
 @media (max-width:991px) {
     html {
         font-size: 50%;
     }
-    .dishes .box-container .box img{
+
+    .dishes .box-container .box img {
         height: auto;
         width: 100%;
     }
